Modify about section text.  Fix alignment on skills lists.  Modify project buttons.  Add card to project section on devices below 700px width.

--- a/src/components/ProjectButton/styles.module.scss
+++ b/src/components/ProjectButton/styles.module.scss
@@ -1,6 +1,9 @@
 .button {
   margin: 0 5px;
   padding: 5px 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+  font-weight: bold;
 
   @media (min-width: 700px) {
     margin: 0 20px;
