--- a/src/sections/about/AboutText/styles.module.scss
+++ b/src/sections/about/AboutText/styles.module.scss
@@ -2,5 +2,7 @@
   margin: 0 auto;
 
   line-height: 2;
-  width: 80%;
+  width: 90%;
+
+  font-size: 1.2em;
 }
